--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <title>@ViewBag.Title</title>
     
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/FineUploader")
     
     <style>
         .site-wrapper:before {
@@ -74,6 +75,20 @@
     
 </div>
 
+<div class="dontprint modal fade" id="formModalImageUploader" style="z-index: 10000;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title text-center"></h4>
+            </div>
+            <div class="modal-body" id="formModalBodyHolderUpload">
+            </div>
+        </div>
+    </div>
+</div>
 
 <div id="ajaxAlertContainer"></div>
 
@@ -82,6 +97,7 @@
 @Scripts.Render("~/bundles/modernizr")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/customScripts")
+@Scripts.Render("~/bundles/FineUploader")
 @Scripts.Render("~/bundles/tinymce")
 <script src="@Url.Content("~/signalr/hubs")"></script>
 
