--- a/devinmajordotcom/Views/MyHome/_BlogPosts.cshtml
+++ b/devinmajordotcom/Views/MyHome/_BlogPosts.cshtml
@@ -46,7 +46,7 @@
                     <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(post.BackgroundImage))" class="img-responsive image-popup" alt="">
                 </div>
                 <div class="media-body blog-info">
-                    <small><i class="fa fa-clock-o"></i>@post.CreatedOn</small>
+                    <small><i class="fa fa-clock-o"></i><span class="datetime">@post.CreatedOn</span></small>
                     <h3>
                         <a href="@Url.Action("BlogPost", "MyHome", new {ID = post.BlogPostID})">@post.PostTitle</a>
                     </h3>
