--- a/devinmajordotcom/Views/Home/_MainApplicationLinkContent.cshtml
+++ b/devinmajordotcom/Views/Home/_MainApplicationLinkContent.cshtml
@@ -1,7 +1,7 @@
 ﻿@model devinmajordotcom.ViewModels.SiteLinkViewModel
 
 <div class="work-wrapper">
-    <i class="@Model.DisplayIcon" style="font-size: 50px;"></i>
+    <i class="glyphicon @Model.DisplayIcon" style="font-size: 50px;"></i>
     <h3 class="text-uppercase tm-work-h3">@Model.DisplayName</h3>
     <hr>
     <p>@Model.Description</p>
