--- a/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
@@ -18,6 +18,10 @@
 {
 
     @Html.HiddenFor(x => x.UserID)
+    @Html.HiddenFor(x => x.ShowVisitorsAdminHome)
+    @*@Html.HiddenFor(x => x.AddNewFavoriteImage)
+    @Html.HiddenFor(x => x.DefaultFavoriteImage)
+    @Html.HiddenFor(x => x.DefaultBlogPostImage)*@
 
     <div id="formContainer">
 
