--- a/devinmajordotcom/Views/Home/Index.cshtml
+++ b/devinmajordotcom/Views/Home/Index.cshtml
@@ -47,5 +47,7 @@
 </div>
 
 @Html.Partial("../MediaDashboard/_NewLink")
+@Html.Partial("_NewBannerLink")
+@Html.Partial("_NewSiteLink")
 @Html.Partial("../Portfolio/_AddNewTechSkill")
 @Html.Partial("../Portfolio/_AddNewLanguageSkill")
