--- a/devinmajordotcom/Views/Home/_Apps.cshtml
+++ b/devinmajordotcom/Views/Home/_Apps.cshtml
@@ -4,7 +4,7 @@
     var config = Model.LandingPageBannerLinks.FirstOrDefault(x => x.IsEnabled && x.URL == "#home");
 }
 
-<div class="inner cover" id="home">
+<div style="display:none;" class="inner cover" id="home">
 
     <h1 class="cover-heading">@Model.Config.AppsTitle</h1>
     
@@ -18,13 +18,26 @@
 
         if (Model.LandingPageApplicationLinks.Count > 0)
          {
-             foreach (var link in Model.LandingPageApplicationLinks.Where(x => x.IsEnabled).OrderBy(x => x.Order))
-             {
-                 <div class="col-md-4 col-sm-4">
-                     @Html.Raw(Html.ActionLink("REPLACE", link.Action, link.Controller, null, new { @class = "appLink" }).ToHtmlString().Replace("REPLACE", PartialHelper.RenderViewToString(this.ViewContext, "_MainApplicationLinkContent", link)))
-                 </div>
-             }
-         }
+            if (Model.CurrentUserViewModel.UserIsAdmin)
+            {
+                foreach (var link in Model.LandingPageApplicationLinks.Where(x => x.IsEnabled).OrderBy(x => x.Order))
+                {
+                    <div class="col-md-4 col-sm-4">
+                        @Html.Raw(Html.ActionLink("REPLACE", link.Action, link.Controller, null, new { @class = "appLink" }).ToHtmlString().Replace("REPLACE", PartialHelper.RenderViewToString(this.ViewContext, "_MainApplicationLinkContent", link)))
+                    </div>
+                }
+            }
+            else
+            {
+                foreach (var link in Model.LandingPageApplicationLinks.Where(x => x.IsEnabled && x.IsPublic).OrderBy(x => x.Order))
+                {
+                    <div class="col-md-4 col-sm-4">
+                        @Html.Raw(Html.ActionLink("REPLACE", link.Action, link.Controller, null, new { @class = "appLink" }).ToHtmlString().Replace("REPLACE", PartialHelper.RenderViewToString(this.ViewContext, "_MainApplicationLinkContent", link)))
+                    </div>
+                }
+            }
+
+        }
     }
     
 </div>
