--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <title>@ViewBag.Title</title>
+    <title>@config.WebsiteName</title>
     
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/FineUploader")
@@ -43,21 +43,27 @@
         <div class="cover-container">
 
             <div class="masthead clearfix" style="background-color: #0B1C1E; z-index: 2000; min-height: 85px; padding: 2px;">
-                <div class="inner">
-                    <h3 class="masthead-brand text-center">@ViewBag.Title</h3>
-                    <ul class="nav masthead-nav">
-                        @foreach (var link in bannerLinks.Where(x => x.IsEnabled))
-                        {
-                            <li class="landingPageLink @if (link.IsDefault)
-                                                       {<text>active</text>}" data-activediv="@link.URL"><a>@link.DisplayName</a></li>
-                        }
+                <div class="inner" style="padding:0px;">
+                    <h3 class="masthead-brand text-center" style="float:none;">@config.WebsiteName</h3>
+                    <ul class="nav masthead-nav" style="float:none;">
+                        
                         @if (userViewModel.UserIsAdmin)
                         {
-                            <li class="landingPageLink" data-activediv="#appmanager"><a>Settings</a></li>
+                            foreach (var link in bannerLinks.Where(x => x.IsEnabled).OrderBy(x => x.Order))
+                            {
+                                <li class="landingPageLink @if (link.IsDefault)
+                                                       {<text>active</text>}" data-activediv="@link.URL"><a><span class="fa @link.DisplayIcon"></span>&nbsp;@link.DisplayName</a></li>
+                            }
+                            <li class="landingPageLink" data-activediv="#appmanager"><a><span class="fa fa-cog"></span>&nbsp;Settings</a></li>
                         }
                         else
                         {
-                            <li class="landingPageLink" id="mainLogin"><a>Login</a></li>
+                            foreach (var link in bannerLinks.Where(x => x.IsEnabled && x.IsPublic).OrderBy(x => x.Order))
+                            {
+                                <li class="landingPageLink @if (link.IsDefault)
+                                                       {<text>active</text>}" data-activediv="@link.URL"><a><span class="fa @link.DisplayIcon"></span>&nbsp;@link.DisplayName</a></li>
+                            }
+                            <li class="landingPageLink" id="mainLogin"><a><span class="fa fa-sign-in"></span>&nbsp;Login</a></li>
                         }
                     </ul>
                 </div>
