lots of fixes, including file uploader and some titles

--- a/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
+++ b/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
@@ -32,6 +32,10 @@
                             {
                                 @Html.Partial("../MediaDashboard/_ManageMediaDashboard", Model.CurrentMediaDashboardData)
                             }
+                            @if (appDataModel.Controller == "MyHome" && appDataModel.Action == "Index")
+                            {
+                                @Html.Partial("../MyHome/_ManageMyHome", Model.CurrentMyHomeData)
+                            }
                             @if (appDataModel.Controller == "Portfolio" && appDataModel.Action == "Index")
                             {
                                 @Html.Partial("../Portfolio/_ManagePortfolio", Model.CurrentPortfolioData)
