--- a/devinmajordotcom/Views/MyHome/BlogPost.cshtml
+++ b/devinmajordotcom/Views/MyHome/BlogPost.cshtml
@@ -5,58 +5,66 @@
 }
 
 <div class="container">
-    
-    <div class="row">
-        
-        <div class="col-lg-12">
-            <h1 class="mt-4 blogHoverItem">@Model.PostTitle</h1>
-            <p class="lead">
-                Authored by:
-                <a href="#" class="blogHoverItem">@Model.AuthorUserName</a>
-            </p>
-            <hr />
-            <p class="blogHoverItem"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Posted on <span class="datetime">@Model.CreatedOn</span></p>
-            @if (Model.ModifiedOn != Model.CreatedOn)
-            {
-                <p class="blogHoverItem"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Last edited on <span class="datetime">@Model.ModifiedOn</span></p>
-            }
-            <hr />
+
+    @if (Model.BlogPostID == 0)
+    {
+        @Html.Partial("Error", new HandleErrorInfo(new Exception(), "MyHome", "BlogPost"))
+    }
+    else
+    {
+
+        <div class="row">
+
+            <div class="col-lg-12">
+                <h1 class="mt-4 blogHoverItem">@Model.PostTitle</h1>
+                <p class="lead">
+                    Authored by:
+                    <a href="#" class="blogHoverItem">@Model.AuthorUserName</a>
+                </p>
+                <hr />
+                <p class="blogHoverItem"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Posted on <span class="datetime">@Model.CreatedOn</span></p>
+                @if (Model.ModifiedOn != Model.CreatedOn)
+                {
+                    <p class="blogHoverItem"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Last edited on <span class="datetime">@Model.ModifiedOn</span></p>
+                }
+                <hr />
+            </div>
+
+            <div class="col-lg-12">
+                <div class="blog-image">
+                    <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(Model.BackgroundImage))" class="img-responsive img-fluid rounded" alt="Blog Post Image">
+                </div>
+            </div>
+
+            <div class="col-lg-12">
+                <hr />
+                @Html.Raw(Model.Body)
+                <hr />
+            </div>
+
         </div>
 
-        <div class="col-lg-12">
-            <div class="blog-image">
-                <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(Model.BackgroundImage))" class="img-responsive img-fluid rounded" alt="Blog Post Image">
+        <div class="row">
+            <div class="col-lg-12" id="commentsContainer">
+                @Html.Partial("_BlogPostComments", Model.PostComments)
             </div>
         </div>
 
-        <div class="col-lg-12">       
-            <hr />    
-            @Html.Raw(Model.Body)   
-            <hr />         
+        <br />
+
+        <div class="row">
+            <div class="col-lg-12">
+                @Html.Partial("_NewComment", Model.NewComment)
+            </div>
         </div>
 
-    </div>
+        <br />
 
-    <div class="row">
-        <div class="col-lg-12" id="commentsContainer">
-            @Html.Partial("_BlogPostComments",Model.PostComments)
-        </div>
-    </div>
-    
-    <br/>
-    
-    <div class="row">
-        <div class="col-lg-12">
-            @Html.Partial("_NewComment", Model.NewComment)
-        </div>
-    </div>
-    
-    <br/>
+        @section scripts {
+            <script>
+                RefreshTinyMce();
+            </script>
+        }
+    }
 
 </div>
-
-@section scripts {
-    <script>
-        RefreshTinyMce();
-    </script>
-}
