--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -102,7 +102,7 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title">
                         <h2>@Model.UserConfig.BookmarksTitle</h2>
-                        @if (Model.CurrentUserViewModel.UserIsLoggedIn)
+                        @if (Model.CurrentUserViewModel.UserIsLoggedIn && Model.UserConfig.IsEditable)
                         {
                             <br/>
                             @Html.Raw(editFavoritesButton)
@@ -132,7 +132,7 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title">
                         <h2>@Model.UserConfig.BlogTitle</h2>
-                        @if (Model.CurrentUserViewModel.UserIsLoggedIn)
+                        @if (Model.CurrentUserViewModel.UserIsLoggedIn && Model.UserConfig.IsEditable)
                         {
                             <br />
                             @Html.Raw(editBlogPostsButton)
