--- a/devinmajordotcom/Views/MyHome/_AddBlogPostForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_AddBlogPostForm.cshtml
@@ -12,7 +12,8 @@
         new
         {
             @class = "btn btn-primary",
-            @style = ""
+            @style = "",
+            @onClick = "ResetActiveImage(this)"
         }).ToHtmlString().Replace("REPLACE", "<span class=\"fa fa-upload\"></span>&nbsp;&nbsp;Change Image...");
 }
 
@@ -75,8 +76,8 @@
             </div>
             <br/>
             <div clas="col-sm-12 text-center">
-                @Html.HiddenFor(x => x.BackgroundImage, new {@class = "favoriteBackgroundImage"})
-                <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(Model.BackgroundImage))" id="previewImage" style="display: inline-block;" class="img-responsive" alt="Background Image">
+                @Html.HiddenFor(x => x.BackgroundImage, new {@class = "favoriteBackgroundImage BackgroundImage", activeimage="false"})
+                <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(Model.BackgroundImage))" activepreview="false" id="previewImage" style="display: inline-block;" class="img-responsive previewImage" alt="Background Image">
                 <br/>
                 @Html.Raw(uploadButton)
             </div>
