--- a/devinmajordotcom/Views/Shared/Error.cshtml
+++ b/devinmajordotcom/Views/Shared/Error.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Error";
+    ViewBag.Layout = (string)ViewBag.Layout;
 }
 
 @if (Model.ControllerName != "Portfolio")
@@ -18,17 +19,28 @@
         }
     </style>
 }
+@if (Model.ControllerName == "MediaDashboard" || Model.ControllerName == "MyHome")
+{
+    <style>
+        body {
+            color: black !important;
+        }
+        h4 {
+            color: black !important;
+        }
+    </style>
+}
 else
 {
     <style>
         body {
-            color:white;
+            color: white;
         }
     </style>
 }
 
 <div class="row absolute-center">
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-3 text-center">
         <span class="text-center glyphicon glyphicon-question-sign" style="font-size: 50px;"></span>
         <hr>
         <h4 class="text-center">Sorry, there is nothing available here at this time! Please contact us here, and let us know you saw this message.</h4>
