--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -6,7 +6,7 @@
 <html lang="en">
 <head>
 
-    <title>@ViewBag.Title</title>
+    <title>@userConfigViewModel.WebsiteName</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="">
@@ -48,7 +48,7 @@
 
             <div class="navbar-header">
                 <!-- lOGO TEXT HERE -->
-                <a href="#" data-toggle="collapse" data-target="#mainLinks" class="navbar-brand">MyHome</a>
+                <a href="#" data-toggle="collapse" data-target="#mainLinks" class="navbar-brand">@userConfigViewModel.WebsiteName</a>
             </div>
 
             <!-- MENU LINKS -->
