--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -81,6 +81,21 @@
     
 </div>
 
+<div class="dontprint modal fade" id="formModalAddEdit" style="z-index: 10000;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title text-center"></h4>
+            </div>
+            <div class="modal-body" id="formModalBodyHolder">
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="dontprint modal fade" id="formModalImageUploader" style="z-index: 10000;">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
