--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -497,80 +497,142 @@
             </div>
             <div id="collapse5" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <div class="linkContainer">
+                    <div id="contactLinksContainer" style="overflow:auto !important;" class="">
+                        <ul id="contactLinksList" class="mediaSortable">
+                            @{
+                                count = 0;
+                            }
                             @foreach (var link in Model.ContactSiteLinks.OrderBy(x => x.Order))
                             {
-                                @Html.HiddenFor(x => x.ContactSiteLinks[contactLinkCount].ID, new { @class = "hiddenContactLinkID hiddenInput_" + Model.ContactSiteLinks[contactLinkCount].ID })
-                                <div class="contactLink" data-hiddeninputid="@Html.IdFor(x => x.ContactSiteLinks[contactLinkCount].Order)" style="padding-top: 10px; margin-bottom: 2vh;">
-                                    @Html.HiddenFor(x => x.ContactSiteLinks[contactLinkCount].Order, new { @class = "hiddenOrder hiddenInput_" + Model.ContactSiteLinks[contactLinkCount].ID })
-
-                                    @{
-                                        var linkText = "<span class='fa fa-trash'></span>";
-                                        var actionLink = Ajax.ActionLink("REPLACE", "RemoveContactLink", "Portfolio", new { ID = Model.ContactSiteLinks[contactLinkCount].ID }, new AjaxOptions() { HttpMethod = "GET", OnSuccess = "RemoveContactLink('#deleteLink_" + Model.ContactSiteLinks[contactLinkCount].ID + "')", OnFailure = "ManagePortfolioSkillsAjaxFailure" }, new { data_content = linkText, @id = "deleteLink_" + Model.ContactSiteLinks[contactLinkCount].ID, @class = "btn btn-danger deleteGroup deleteMediaLink", @style = "float:right;" });
-                                    }
+                                @Html.HiddenFor(x => x.ContactSiteLinks[count].ID, new {@class = "hiddenContactLinkId hiddenInput_" + Model.ContactSiteLinks[count].ID})
+                                <li class="contactLink handlebarsItem" data-hiddeninputid="@Html.IdFor(x => x.ContactSiteLinks[count].Order)" style="padding-top: 10px; margin-bottom: 2vh;">
+                                    @Html.HiddenFor(x => x.ContactSiteLinks[count].Order, new {@class = "hiddenOrder hiddenInput_" + Model.ContactSiteLinks[count].ID})
+                                    <div class="row">
+                                        <div class="col-sm-2">
+                                            <span class="btn btn-primary move" type="button"><span class="fa fa-arrows"></span></span>
+                                        </div>
+                                        <div class="col-sm-8 text-center">
+                                            <h4>
+                                                <span class="iconContainer"><span class="fa @Model.ContactSiteLinks[count].DisplayIcon"></span></span>
+                                                &nbsp;&nbsp;
+                                                <span class="titleContainer">@Model.ContactSiteLinks[count].DisplayName</span>
+                                            </h4>
+                                        </div>
+                                        <div class="col-sm-2">
+                                            @{
+                                                var linkText = "<span class='fa fa-trash'></span>";
+                                                var actionLink = Ajax.ActionLink("REPLACE", "RemoveContactLink", "Portfolio", new {ID = Model.ContactSiteLinks[count].ID}, new AjaxOptions() {HttpMethod = "GET", OnSuccess = "RemoveContactLink('#deleteContactLink_" + Model.ContactSiteLinks[count].ID + "')", OnFailure = "ManageMediaAjaxFailure"}, new {data_content = linkText, @id = "deleteContactLink_" + Model.ContactSiteLinks[count].ID, @class = "btn btn-danger deleteGroup deleteContactLink", @style = "float:right;"});
+                                                @Html.Raw(actionLink.ToHtmlString().Replace("REPLACE", linkText))
+                                            }
+                                        </div>
+                                    </div>
+                                    <br/>
+                                    <div class="row">
+                                        <div class="col-sm-6 text-center">
+                                            <div style="margin-bottom: 8px" class="input-group">
+                                                <div class="input-group-addon">Directive</div>
+                                                @Html.TextBoxFor(x => x.ContactSiteLinks[count].Directive, new {@class = "form-control", style = "margin-bottom: 0px", placeholder = "Follow me on..."})
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 text-center">
+                                            <div style="margin-bottom: 8px" class="input-group">
+                                                <span class="input-group-btn">
+                                                    <button data-placement="left"
+                                                            class="btn btn-default iconpicker"
+                                                            name="@Html.NameFor(x => x.ContactSiteLinks[count].DisplayIcon)"
+                                                            role="iconpicker"
+                                                            data-iconset="fontawesome"
+                                                            data-icon="@Model.ContactSiteLinks[count].DisplayIcon"
+                                                            type="button"></button>
+                                                </span>
+                                                @Html.TextBoxFor(x => x.ContactSiteLinks[count].DisplayName, new {@class = "form-control namer", style = "margin-bottom: 0px", placeholder = "Display Name"})
+                                            </div>
+                                        </div>
+                                    </div>
 
                                     <div class="row">
+                                        <div class="col-sm-6 text-center">
+                                            @Html.TextBoxFor(x => x.ContactSiteLinks[count].URL, new {@class = "form-control", style = "margin-bottom: 0px", placeholder = "http://www.google.ca/"})
+                                        </div>
+                                        <div class="col-sm-6 text-center">
+                                            <div class="customColorPicker contactSiteLink input-group colorpicker-component" data-color="@Model.ContactSiteLinks[count].Color">
+                                                @Html.TextBoxFor(x => x.ContactSiteLinks[count].Color, new {@class = "form-control linkColorValue", @placeholder = "Pick a color, any color!"})
+                                                <span class="input-group-addon"><i></i></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12 text-center">
+                                            @Html.ValidationMessageFor(x => x.ContactSiteLinks[count].DisplayName)
+                                        </div>
+                                    </div>
+                                    <br/>
+                                </li>
+                                count++;
+                            }
+                        </ul>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-offset-2 col-sm-8">
+                            <button class="form-control btn btn-success" id="addNewContactLink" type="button" style="border-color: #00bc8c !important; background-color: #00bc8c !important;"><span class="glyphicon glyphicon-plus"></span>&nbsp;Add New Link</button>
+                        </div>
+                    </div>
+                    @*<div class="linkContainer">
+                        @foreach (var link in Model.ContactSiteLinks.OrderBy(x => x.Order))
+                        {
+                            @Html.HiddenFor(x => x.ContactSiteLinks[contactLinkCount].ID, new { @class = "hiddenContactLinkID hiddenInput_" + Model.ContactSiteLinks[contactLinkCount].ID })
+                            <div class="contactLink" data-hiddeninputid="@Html.IdFor(x => x.ContactSiteLinks[contactLinkCount].Order)" style="padding-top: 10px; margin-bottom: 2vh;">
+                                @Html.HiddenFor(x => x.ContactSiteLinks[contactLinkCount].Order, new { @class = "hiddenOrder hiddenInput_" + Model.ContactSiteLinks[contactLinkCount].ID })
+
+                                @{
+                                    var linkText = "<span class='fa fa-trash'></span>";
+                                    var actionLink = Ajax.ActionLink("REPLACE", "RemoveContactLink", "Portfolio", new { ID = Model.ContactSiteLinks[contactLinkCount].ID }, new AjaxOptions() { HttpMethod = "GET", OnSuccess = "RemoveContactLink('#deleteLink_" + Model.ContactSiteLinks[contactLinkCount].ID + "')", OnFailure = "ManagePortfolioSkillsAjaxFailure" }, new { data_content = linkText, @id = "deleteLink_" + Model.ContactSiteLinks[contactLinkCount].ID, @class = "btn btn-danger deleteGroup deleteMediaLink", @style = "float:right;" });
+                                }
+
+                                <div class="row">
                                         
-                                        <div class="col-sm-12 wow rotateInUpLeft" data-wow-delay="0.3s">
+                                    <div class="col-sm-12 wow rotateInUpLeft" data-wow-delay="0.3s">
                                             
-                                            <div class="media @Model.ContactSiteLinks[contactLinkCount].DisplayIcon.Replace("fa fa-","")">
-                                                <div class="text-right">
-                                                    @Html.Raw(actionLink.ToHtmlString().Replace("REPLACE", linkText))
-                                                </div> 
-                                                <div class="media-object pull-left">
-                                                    <div class="col-sm-12 text-center">
-                                                        <div style="margin-bottom: 8px" class="input-group">
-                                                            <span class="input-group-btn">
-                                                                <button data-placement="left"
-                                                                        class="btn btn-default iconpicker"
-                                                                        name="@Html.NameFor(x => x.ContactSiteLinks[contactLinkCount].DisplayIcon)"
-                                                                        role="iconpicker"
-                                                                        data-iconset="fontawesome"
-                                                                        data-icon="@Model.ContactSiteLinks[contactLinkCount].DisplayIcon"
-                                                                        type="button"></button>
-                                                            </span>
-                                                            @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].Directive, new { @class = "form-control namer", style = "margin-bottom: 0px", placeholder = "Follow me on" })
-                                                        </div>
+                                        <div class="media @Model.ContactSiteLinks[contactLinkCount].DisplayIcon.Replace("fa fa-","")">
+                                            <div class="text-right">
+                                                @Html.Raw(actionLink.ToHtmlString().Replace("REPLACE", linkText))
+                                            </div> 
+                                            <div class="media-object pull-left">
+                                                <div class="col-sm-12 text-center">
+                                                    <div style="margin-bottom: 8px" class="input-group">
+                                                        <span class="input-group-btn">
+                                                            <button data-placement="left"
+                                                                    class="btn btn-default iconpicker"
+                                                                    name="@Html.NameFor(x => x.ContactSiteLinks[contactLinkCount].DisplayIcon)"
+                                                                    role="iconpicker"
+                                                                    data-iconset="fontawesome"
+                                                                    data-icon="@Model.ContactSiteLinks[contactLinkCount].DisplayIcon"
+                                                                    type="button"></button>
+                                                        </span>
+                                                        @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].Directive, new { @class = "form-control namer", style = "margin-bottom: 0px", placeholder = "Follow me on" })
                                                     </div>
-                                                    <div class="col-sm-12 text-center">
-                                                        <div class="customColorPicker input-group colorpicker-component" data-color="@Model.ContactSiteLinks[contactLinkCount].Color">
-                                                            @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].Color, new { @class = "form-control", @placeholder = "Pick a color, any color!" })
-                                                            <span class="input-group-addon"><i></i></span>
-                                                        </div>
+                                                </div>
+                                                <div class="col-sm-12 text-center">
+                                                    <div class="customColorPicker input-group colorpicker-component" data-color="@Model.ContactSiteLinks[contactLinkCount].Color">
+                                                        @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].Color, new { @class = "form-control", @placeholder = "Pick a color, any color!" })
+                                                        <span class="input-group-addon"><i></i></span>
                                                     </div>
-                                                    <div class="tcol-sm-12ext-center">
-                                                        @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].DisplayName, new { @class = "form-control namer", style = "margin-bottom: 0px", placeholder = "Facebook" })
-                                                    </div>
+                                                </div>
+                                                <div class="tcol-sm-12ext-center">
+                                                    @Html.TextBoxFor(x => x.ContactSiteLinks[contactLinkCount].DisplayName, new { @class = "form-control namer", style = "margin-bottom: 0px", placeholder = "Facebook" })
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-sm-12 text-center">
-                                            @Html.ValidationMessageFor(x => x.ContactSiteLinks[contactLinkCount].DisplayName)
-                                        </div>
                                     </div>
-                                </div>
-                                contactLinkCount++;
-                            }
-                        
-                        @*@foreach (var contactLink in Model.ContactSiteLinks.OrderBy(x => x.Order))
-                        {
-                            <div class="row">
-                                <div class="col-sm-12 wow rotateInUpLeft" data-wow-delay="0.3s">
-                                    <div class="media @contactLink.DisplayIcon.Replace("fa fa-","")">
-                                        <a href="@contactLink.URL">
-                                            <div class="media-object pull-left">
-                                                <i class="@contactLink.DisplayIcon"></i>
-                                            </div>
-                                            <div class="media-body">
-                                                <h4 class="media-heading tm-social-title">@contactLink.Directive</h4>
-                                                <h3>@contactLink.DisplayName</h3>
-                                            </div>
-                                        </a>
+                                    <div class="col-sm-12 text-center">
+                                        @Html.ValidationMessageFor(x => x.ContactSiteLinks[contactLinkCount].DisplayName)
                                     </div>
                                 </div>
                             </div>
-                        }*@
-                    </div>
+                            contactLinkCount++;
+                        }
+                    </div>*@
                 </div>
             </div>
         </div>
